Fixed typo, adjusted checkbox (css)

--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -344,7 +344,7 @@
 													<div class="link-container-icon-right">
 														<a href="/"
 															class="btn btn-link">
-															Continue Shoppping &nbsp;
+															Continue Shopping &nbsp;
 														</a>
 													</div>
 													<div class="button-container-icon-right">
