--- a/src/confirm-order.html
+++ b/src/confirm-order.html
@@ -878,8 +878,8 @@
 														</div>
 														<div class="col-md-6">
 															<div class="btn-container">
-																<button type="button"
-																		id="updateCart"
+																<button type="submit"
+																		id="placeOrder"
 																		class="btn btn-warning">Place order</button>
 															</div>
 														</div>
