--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -326,7 +326,7 @@
 													<div class="row">
 														<div class="col-md-6">
 															<div class="btn-container">
-																<button type="button"
+																<button type="submit"
 																		id="updateCart"
 																		class="btn btn-warning">Update
 																	cart</button>
