Prepared for handoff.

--- a/src/store1.html
+++ b/src/store1.html
@@ -9,8 +9,8 @@
 	<link rel="shortcut icon"
 		  href="favicon.ico"
 		  type="image/x-icon">
-	<!-- build:css template/css/app.min.css -->
-	<link rel="stylesheet" href="template/css/app.css">
+	<!-- build:css /template/css/app.min.css -->
+	<link rel="stylesheet" href="/template/css/app.css">
 	<!-- endbuild -->
 </head>
 
@@ -26,7 +26,7 @@
 					<a class="navbar-brand"
 					   href="/">
 						<img alt="metro transit logo"
-							 src="template/img/MetroTransitLogo.svg"
+							 src="/template/img/MetroTransitLogo.svg"
 							 class="logo d-inline-block">
 					</a>
 					<button class="navbar-toggler"
@@ -51,9 +51,9 @@
 								   aria-haspopup="true"
 								   aria-expanded="false">
 									Trip Tools
-									<img src="template/img/svg/chevron-down-gray.svg"
+									<img src="/template/img/svg/chevron-down-gray.svg"
 										 class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg"
+									<img src="/template/img/svg/chevron-down-white.svg"
 										 class="icon active">
 								</a>
 								<div class="dropdown-menu"
@@ -87,9 +87,9 @@
 								   aria-haspopup="true"
 								   aria-expanded="false">
 									Fares
-									<img src="template/img/svg/chevron-down-gray.svg"
+									<img src="/template/img/svg/chevron-down-gray.svg"
 										 class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg"
+									<img src="/template/img/svg/chevron-down-white.svg"
 										 class="icon active">
 								</a>
 								<div class="dropdown-menu"
@@ -113,9 +113,9 @@
 								   aria-haspopup="true"
 								   aria-expanded="false">
 									More
-									<img src="template/img/svg/chevron-down-gray.svg"
+									<img src="/template/img/svg/chevron-down-gray.svg"
 										 class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg"
+									<img src="/template/img/svg/chevron-down-white.svg"
 										 class="icon active">
 								</a>
 								<div class="dropdown-menu"
@@ -141,9 +141,9 @@
 								   aria-haspopup="true"
 								   aria-expanded="false">
 									Help
-									<img src="template/img/svg/chevron-down-gray.svg"
+									<img src="/template/img/svg/chevron-down-gray.svg"
 										 class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg"
+									<img src="/template/img/svg/chevron-down-white.svg"
 										 class="icon active">
 								</a>
 								<div class="dropdown-menu"
@@ -171,9 +171,9 @@
 								   aria-haspopup="true"
 								   aria-expanded="false">
 									En
-									<img src="template/img/svg/chevron-down-gray.svg"
+									<img src="/template/img/svg/chevron-down-gray.svg"
 										 class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg"
+									<img src="/template/img/svg/chevron-down-white.svg"
 										 class="icon active">
 								</a>
 								<div class="dropdown-menu"
@@ -205,17 +205,17 @@
 							<li class="nav-item">
 								<a class="nav-link"
 								   href="https://store.metrotransit.org">
-									<img src="template/img/svg/shopping-cart-green.svg"
+									<img src="/template/img/svg/shopping-cart-green.svg"
 										 class="icon inactive">
-									<img src="template/img/svg/shopping-cart-white.svg"
+									<img src="/template/img/svg/shopping-cart-white.svg"
 										 class="icon active">
 								</a>
 							</li>
 							<li class="nav-item position-relative">
 								<div class="nav-link site-search">
-									<img src="template/img/svg/search-gray.svg"
+									<img src="/template/img/svg/search-gray.svg"
 										 class="icon  inactive">
-									<img src="template/img/svg/search-white.svg"
+									<img src="/template/img/svg/search-white.svg"
 										 class="icon active">
 								</div>
 								<div id="search-box"
@@ -235,7 +235,7 @@
 													class="btn btn-primary">
 												<span class="sr-only">Search button</span>
 												<img class="icon"
-													 src="template/img/svg/search-gray.svg">
+													 src="/template/img/svg/search-gray.svg">
 											</button>
 										</div>
 									</div>
@@ -244,9 +244,9 @@
 							<li class="nav-item">
 								<a class="nav-link"
 								   href="">
-									<img src="template/img/svg/avatar-gray.svg"
+									<img src="/template/img/svg/avatar-gray.svg"
 										 class="icon inactive">
-									<img src="template/img/svg/avatar-white.svg"
+									<img src="/template/img/svg/avatar-white.svg"
 										 class="icon active">
 								</a>
 							</li>
@@ -430,7 +430,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<img class="img-fluid"
-													 src="template/img/gotoCardBack.gif" />
+													 src="/template/img/gotoCardBack.gif" />
 											</div>
 											<div class="col-md-6">
 												<p class="">Your Go-To Card serial number is a 16-digit number
@@ -513,7 +513,7 @@
 											<a class="stretched-link"
 											   href="https://www.metrotransit.org/buy-by-mail">
 												<img class="icon"
-													 src="template/img/svg/mail-white.svg" />
+													 src="/template/img/svg/mail-white.svg" />
 												<span class="d-block">By mail</span>
 											</a>
 										</div>
@@ -521,7 +521,7 @@
 											<a class="stretched-link"
 											   href="https://www.metrotransit.org/service-centers">
 												<img class="icon"
-													 src="template/img/svg/store-white.svg" />
+													 src="/template/img/svg/store-white.svg" />
 												<span class="d-block">Authorized<br />fare retailer</span>
 											</a>
 										</div>
@@ -531,7 +531,7 @@
 										<div
 											 class="col-5 offset-1 col-md-3 offset-md-3 col-lg-4 offset-lg-2 text-center">
 											<img class="icon phone-white"
-												 src="template/img/svg/phone-white.svg" />
+												 src="/template/img/svg/phone-white.svg" />
 											<p>By phone <br>612-373-3333<br />
 												<small>(for Go-To Cards only)</small></p>
 										</div>
@@ -539,7 +539,7 @@
 											<a class="stretched-link"
 											   href="https://www.metrotransit.org/how-to-use-a-ticket-machine">
 												<img class="icon ticket-white"
-													 src="template/img/svg/ticket-white.svg" />
+													 src="/template/img/svg/ticket-white.svg" />
 												<span class="d-block">Ticket machine<br />on rail platforms</span>
 											</a>
 										</div>
@@ -576,17 +576,17 @@
 				</div>
 				<div class="d-none d-lg-block social-media text-center">
 					<a href="https://www.twitter.com/MetroTransitMN"><img class="icon mr-2"
-							 src="template/img/svg/twitter-gray.svg"></a>
+							 src="/template/img/svg/twitter-gray.svg"></a>
 					<a href="https://www.facebook.com/MetroTransitMN"><img class="icon mr-2"
-							 src="template/img/svg/facebook-gray.svg"></a>
+							 src="/template/img/svg/facebook-gray.svg"></a>
 					<a href="https://www.youtube.com/MetroTransitMN"><img class="icon mr-2"
-							 src="template/img/svg/youtube-gray.svg"></a>
+							 src="/template/img/svg/youtube-gray.svg"></a>
 					<a href="https://instagram.com/metrotransitmn"><img class="icon mr-2"
-							 src="template/img/svg/instagram-gray.svg"></a>
+							 src="/template/img/svg/instagram-gray.svg"></a>
 					<a href="https://www.linkedin.com/company/metro-transit"><img class="icon mr-2"
-							 src="template/img/svg/linkedin-gray.svg"></a>
+							 src="/template/img/svg/linkedin-gray.svg"></a>
 					<a href="https://www.flickr.com/photos/metrotransitmn/"><img class="icon"
-							 src="template/img/svg/flickr-gray.svg"></a>
+							 src="/template/img/svg/flickr-gray.svg"></a>
 				</div>
 				<div class="footer d-none d-lg-block">
 					<div class="card-deck">
@@ -735,18 +735,18 @@
 		<!-- End Footer -->
 
 		<!-- Vendor scripts -->
-		<script src="template/js/jquery.js"></script>
-		<script src="template/js/popper.js"></script>
-		<script src="template/js/bootstrap.js"></script>
-		<script src="template/js/jquery.exlink.js"></script>
-		<script src="template/js/svgxuse.js"></script>
-		<script src="template/js/jquery.validate.js"></script>
-		<!-- <script src="template/js/additional-methods.js"></script> -->
-		<script src="template/js/form-validation.js"></script>
+		<script src="/template/js/jquery.js"></script>
+		<script src="/template/js/popper.js"></script>
+		<script src="/template/js/bootstrap.js"></script>
+		<script src="/template/js/jquery.exlink.js"></script>
+		<script src="/template/js/svgxuse.js"></script>
+		<script src="/template/js/jquery.validate.js"></script>
+		<!-- <script src="/template/js/additional-methods.js"></script> -->
+		<script src="/template/js/form-validation.js"></script>
 		<!-- End vendor scripts -->
 
-		<!-- build:js template/js/scripts.min.js -->
-		<script src="template/js/scripts.js"></script>
+		<!-- build:js /template/js/scripts.min.js -->
+		<script src="/template/js/scripts.js"></script>
 		<!-- endbuild -->
 	</form>
 </body>
