--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -9,8 +9,8 @@
 	<link rel="shortcut icon"
 		  href="favicon.ico"
 		  type="image/x-icon">
-	<!-- build:css template/css/app.min.css -->
-	<link rel="stylesheet" href="template/css/app.css">
+	<!-- build:css /template/css/app.min.css -->
+	<link rel="stylesheet" href="/template/css/app.css">
 	<!-- endbuild -->
 </head>
 
@@ -23,7 +23,7 @@
 				<a href="#mainContent" class="skip-to-content">Skip to main content</a>
 				<div class="container">
 					<a class="navbar-brand" href="/">
-						<img alt="metro transit logo" src="template/img/MetroTransitLogo.svg" class="logo d-inline-block">
+						<img alt="metro transit logo" src="/template/img/MetroTransitLogo.svg" class="logo d-inline-block">
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse"
 						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -37,8 +37,8 @@
 								<a class="nav-link dropdown-toggle" href="/trip-planner" id="navbarDropdown" role="button"
 									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									Trip Tools
-									<img src="template/img/svg/chevron-down-gray.svg" class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg" class="icon active">
+									<img src="/template/img/svg/chevron-down-gray.svg" class="icon inactive">
+									<img src="/template/img/svg/chevron-down-white.svg" class="icon active">
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="/trip-planner">Trip Planner</a>
@@ -59,8 +59,8 @@
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									Fares
-									<img src="template/img/svg/chevron-down-gray.svg" class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg" class="icon active">
+									<img src="/template/img/svg/chevron-down-gray.svg" class="icon inactive">
+									<img src="/template/img/svg/chevron-down-white.svg" class="icon active">
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="/fares">Fares</a>
@@ -73,8 +73,8 @@
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									More
-									<img src="template/img/svg/chevron-down-gray.svg" class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg" class="icon active">
+									<img src="/template/img/svg/chevron-down-gray.svg" class="icon inactive">
+									<img src="/template/img/svg/chevron-down-white.svg" class="icon active">
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="/carpool">Carpool &amp; Vanpool</a>
@@ -88,8 +88,8 @@
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									Help
-									<img src="template/img/svg/chevron-down-gray.svg" class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg" class="icon active">
+									<img src="/template/img/svg/chevron-down-gray.svg" class="icon inactive">
+									<img src="/template/img/svg/chevron-down-white.svg" class="icon active">
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="/how-to-ride">How to Ride Guide</a>
@@ -104,8 +104,8 @@
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									En
-									<img src="template/img/svg/chevron-down-gray.svg" class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg" class="icon active">
+									<img src="/template/img/svg/chevron-down-gray.svg" class="icon inactive">
+									<img src="/template/img/svg/chevron-down-white.svg" class="icon active">
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="#">Link</a>
@@ -124,14 +124,14 @@
 						<ul class="navbar-nav utilities">
 							<li class="nav-item">
 								<a class="nav-link" href="https://store.metrotransit.org">
-									<img src="template/img/svg/shopping-cart-green.svg" class="icon inactive">
-									<img src="template/img/svg/shopping-cart-white.svg" class="icon active">
+									<img src="/template/img/svg/shopping-cart-green.svg" class="icon inactive">
+									<img src="/template/img/svg/shopping-cart-white.svg" class="icon active">
 								</a>
 							</li>
 							<li class="nav-item position-relative">
 								<div class="nav-link site-search">
-									<img src="template/img/svg/search-gray.svg" class="icon  inactive">
-									<img src="template/img/svg/search-white.svg" class="icon active">
+									<img src="/template/img/svg/search-gray.svg" class="icon  inactive">
+									<img src="/template/img/svg/search-white.svg" class="icon active">
 								</div>
 								<div id="search-box" class="site-search-box">
 									<div class="input-group">
@@ -142,7 +142,7 @@
 										<div class="input-group-append mr-auto">
 											<button id="siteSearchButton" type="search" class="btn btn-primary">
 												<span class="sr-only">Search button</span>
-												<img class="icon" src="template/img/svg/search-gray.svg">
+												<img class="icon" src="/template/img/svg/search-gray.svg">
 											</button>
 										</div>
 									</div>
@@ -150,8 +150,8 @@
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="">
-									<img src="template/img/svg/avatar-gray.svg" class="icon inactive">
-									<img src="template/img/svg/avatar-white.svg" class="icon active">
+									<img src="/template/img/svg/avatar-gray.svg" class="icon inactive">
+									<img src="/template/img/svg/avatar-white.svg" class="icon active">
 								</a>
 							</li>
 						</ul>
@@ -371,12 +371,12 @@
 						<a href="/contact-us" class="btn btn-outline-primary">Contact us</a>
 					</div>
 					<div class="d-none d-lg-block social-media text-center">
-						<a href="https://www.twitter.com/MetroTransitMN"><img class="icon mr-2" src="template/img/svg/twitter-gray.svg"></a>
-						<a href="https://www.facebook.com/MetroTransitMN"><img class="icon mr-2" src="template/img/svg/facebook-gray.svg"></a>
-						<a href="https://www.youtube.com/MetroTransitMN"><img class="icon mr-2" src="template/img/svg/youtube-gray.svg"></a>
-						<a href="https://instagram.com/metrotransitmn"><img class="icon mr-2" src="template/img/svg/instagram-gray.svg"></a>
-						<a href="https://www.linkedin.com/company/metro-transit"><img class="icon mr-2" src="template/img/svg/linkedin-gray.svg"></a>
-						<a href="https://www.flickr.com/photos/metrotransitmn/"><img class="icon" src="template/img/svg/flickr-gray.svg"></a>
+						<a href="https://www.twitter.com/MetroTransitMN"><img class="icon mr-2" src="/template/img/svg/twitter-gray.svg"></a>
+						<a href="https://www.facebook.com/MetroTransitMN"><img class="icon mr-2" src="/template/img/svg/facebook-gray.svg"></a>
+						<a href="https://www.youtube.com/MetroTransitMN"><img class="icon mr-2" src="/template/img/svg/youtube-gray.svg"></a>
+						<a href="https://instagram.com/metrotransitmn"><img class="icon mr-2" src="/template/img/svg/instagram-gray.svg"></a>
+						<a href="https://www.linkedin.com/company/metro-transit"><img class="icon mr-2" src="/template/img/svg/linkedin-gray.svg"></a>
+						<a href="https://www.flickr.com/photos/metrotransitmn/"><img class="icon" src="/template/img/svg/flickr-gray.svg"></a>
 					</div>
 					<div class="footer d-none d-lg-block">
 						<div class="card-deck">
@@ -503,15 +503,15 @@
 		<!-- End Footer -->
 
 		<!-- Vendor scripts -->
-		<script src="template/js/jquery.js"></script>
-		<script src="template/js/popper.js"></script>
-		<script src="template/js/bootstrap.js"></script>
-		<script src="template/js/jquery.exlink.js"></script>
-		<script src="template/js/svgxuse.js"></script>
+		<script src="/template/js/jquery.js"></script>
+		<script src="/template/js/popper.js"></script>
+		<script src="/template/js/bootstrap.js"></script>
+		<script src="/template/js/jquery.exlink.js"></script>
+		<script src="/template/js/svgxuse.js"></script>
 		<!-- End vendor scripts -->
 
-		<!-- build:js template/js/scripts.min.js -->
-		<script src="template/js/scripts.js"></script>
+		<!-- build:js /template/js/scripts.min.js -->
+		<script src="/template/js/scripts.js"></script>
 		<!-- endbuild -->
 	</form>
 </body>
