--- a/src/terms.html
+++ b/src/terms.html
@@ -9,8 +9,8 @@
 	<link rel="shortcut icon"
 		  href="favicon.ico"
 		  type="image/x-icon">
-	<!-- build:css template/css/app.min.css -->
-	<link rel="stylesheet" href="template/css/app.css">
+	<!-- build:css /template/css/app.min.css -->
+	<link rel="stylesheet" href="/template/css/app.css">
 	<!-- endbuild -->
 </head>
 
@@ -27,7 +27,7 @@
 					<a class="navbar-brand"
 					href="/">
 						<img alt="metro transit logo"
-							src="template/img/MetroTransitLogo.svg"
+							src="/template/img/MetroTransitLogo.svg"
 							class="logo d-inline-block">
 					</a>
 					<button class="navbar-toggler"
@@ -52,9 +52,9 @@
 								aria-haspopup="true"
 								aria-expanded="false">
 									Trip Tools
-									<img src="template/img/svg/chevron-down-gray.svg"
+									<img src="/template/img/svg/chevron-down-gray.svg"
 										class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg"
+									<img src="/template/img/svg/chevron-down-white.svg"
 										class="icon active">
 								</a>
 								<div class="dropdown-menu"
@@ -88,9 +88,9 @@
 								aria-haspopup="true"
 								aria-expanded="false">
 									Fares
-									<img src="template/img/svg/chevron-down-gray.svg"
+									<img src="/template/img/svg/chevron-down-gray.svg"
 										class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg"
+									<img src="/template/img/svg/chevron-down-white.svg"
 										class="icon active">
 								</a>
 								<div class="dropdown-menu"
@@ -114,9 +114,9 @@
 								aria-haspopup="true"
 								aria-expanded="false">
 									More
-									<img src="template/img/svg/chevron-down-gray.svg"
+									<img src="/template/img/svg/chevron-down-gray.svg"
 										class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg"
+									<img src="/template/img/svg/chevron-down-white.svg"
 										class="icon active">
 								</a>
 								<div class="dropdown-menu"
@@ -142,9 +142,9 @@
 								aria-haspopup="true"
 								aria-expanded="false">
 									Help
-									<img src="template/img/svg/chevron-down-gray.svg"
+									<img src="/template/img/svg/chevron-down-gray.svg"
 										class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg"
+									<img src="/template/img/svg/chevron-down-white.svg"
 										class="icon active">
 								</a>
 								<div class="dropdown-menu"
@@ -172,9 +172,9 @@
 								aria-haspopup="true"
 								aria-expanded="false">
 									En
-									<img src="template/img/svg/chevron-down-gray.svg"
+									<img src="/template/img/svg/chevron-down-gray.svg"
 										class="icon inactive">
-									<img src="template/img/svg/chevron-down-white.svg"
+									<img src="/template/img/svg/chevron-down-white.svg"
 										class="icon active">
 								</a>
 								<div class="dropdown-menu"
@@ -206,17 +206,17 @@
 							<li class="nav-item">
 								<a class="nav-link"
 								href="https://store.metrotransit.org">
-									<img src="template/img/svg/shopping-cart-green.svg"
+									<img src="/template/img/svg/shopping-cart-green.svg"
 										class="icon inactive">
-									<img src="template/img/svg/shopping-cart-white.svg"
+									<img src="/template/img/svg/shopping-cart-white.svg"
 										class="icon active">
 								</a>
 							</li>
 							<li class="nav-item position-relative">
 								<div class="nav-link site-search">
-									<img src="template/img/svg/search-gray.svg"
+									<img src="/template/img/svg/search-gray.svg"
 										class="icon  inactive">
-									<img src="template/img/svg/search-white.svg"
+									<img src="/template/img/svg/search-white.svg"
 										class="icon active">
 								</div>
 								<div id="search-box"
@@ -236,7 +236,7 @@
 													class="btn btn-primary">
 												<span class="sr-only">Search button</span>
 												<img class="icon"
-													src="template/img/svg/search-gray.svg">
+													src="/template/img/svg/search-gray.svg">
 											</button>
 										</div>
 									</div>
@@ -245,9 +245,9 @@
 							<li class="nav-item">
 								<a class="nav-link"
 								href="">
-									<img src="template/img/svg/avatar-gray.svg"
+									<img src="/template/img/svg/avatar-gray.svg"
 										class="icon inactive">
-									<img src="template/img/svg/avatar-white.svg"
+									<img src="/template/img/svg/avatar-white.svg"
 										class="icon active">
 								</a>
 							</li>
@@ -424,12 +424,12 @@
 						<a href="/contact-us" class="btn btn-outline-primary">Contact us</a>
 					</div>
 					<div class="d-none d-lg-block social-media text-center">
-						<a href="https://www.twitter.com/MetroTransitMN"><img class="icon mr-2" src="template/img/svg/twitter-gray.svg"></a>
-						<a href="https://www.facebook.com/MetroTransitMN"><img class="icon mr-2" src="template/img/svg/facebook-gray.svg"></a>
-						<a href="https://www.youtube.com/MetroTransitMN"><img class="icon mr-2" src="template/img/svg/youtube-gray.svg"></a>
-						<a href="https://instagram.com/metrotransitmn"><img class="icon mr-2" src="template/img/svg/instagram-gray.svg"></a>
-						<a href="https://www.linkedin.com/company/metro-transit"><img class="icon mr-2" src="template/img/svg/linkedin-gray.svg"></a>
-						<a href="https://www.flickr.com/photos/metrotransitmn/"><img class="icon" src="template/img/svg/flickr-gray.svg"></a>
+						<a href="https://www.twitter.com/MetroTransitMN"><img class="icon mr-2" src="/template/img/svg/twitter-gray.svg"></a>
+						<a href="https://www.facebook.com/MetroTransitMN"><img class="icon mr-2" src="/template/img/svg/facebook-gray.svg"></a>
+						<a href="https://www.youtube.com/MetroTransitMN"><img class="icon mr-2" src="/template/img/svg/youtube-gray.svg"></a>
+						<a href="https://instagram.com/metrotransitmn"><img class="icon mr-2" src="/template/img/svg/instagram-gray.svg"></a>
+						<a href="https://www.linkedin.com/company/metro-transit"><img class="icon mr-2" src="/template/img/svg/linkedin-gray.svg"></a>
+						<a href="https://www.flickr.com/photos/metrotransitmn/"><img class="icon" src="/template/img/svg/flickr-gray.svg"></a>
 					</div>
 					<div class="footer d-none d-lg-block">
 						<div class="card-deck">
@@ -556,18 +556,18 @@
 		<!-- End Footer -->
 
 		<!-- Vendor scripts -->
-		<script src="template/js/jquery.js"></script>
-		<script src="template/js/popper.js"></script>
-		<script src="template/js/bootstrap.js"></script>
-		<script src="template/js/jquery.exlink.js"></script>
-		<script src="template/js/svgxuse.js"></script>
-		<script src="template/js/jquery.validate.js"></script>
-		<!-- <script src="template/js/additional-methods.js"></script> -->
-		<script src="template/js/form-validation.js"></script>
+		<script src="/template/js/jquery.js"></script>
+		<script src="/template/js/popper.js"></script>
+		<script src="/template/js/bootstrap.js"></script>
+		<script src="/template/js/jquery.exlink.js"></script>
+		<script src="/template/js/svgxuse.js"></script>
+		<script src="/template/js/jquery.validate.js"></script>
+		<!-- <script src="/template/js/additional-methods.js"></script> -->
+		<script src="/template/js/form-validation.js"></script>
 		<!-- End vendor scripts -->
 
-		<!-- build:js template/js/scripts.min.js -->
-		<script src="template/js/scripts.js"></script>
+		<!-- build:js /template/js/scripts.min.js -->
+		<script src="/template/js/scripts.js"></script>
 		<!-- endbuild -->
 	</form>
 </body>
