Updated buttons to radios to look like buttons.

--- a/src/store1.html
+++ b/src/store1.html
@@ -261,7 +261,6 @@
 		<section id="mainContent">
 			<div id="primaryPage">
 
-				<!-- When adding a new page, also add new background image styles in _hero-backgrounds.scss. Change the class below to match that of the hero background. -->
 				<div class="hero store-hero-bg">
 					<div class="container">
 						<div class="page-title">
@@ -302,36 +301,86 @@
 									<div class="card-body">
 										<h3 class="h4 text-center">Choose an amount</h3>
 										<div class="d-flex flex-wrap">
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$5</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$10</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$20</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$30</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$35</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$40</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$45</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$50</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$60</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$70</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$80</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$100</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$120</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$140</button>
-											<button type="button"
-													class="btn btn-outline-secondary btn-amount">$180</button>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount active">
+													<input type="radio" name="Value" id="Value0" value="0" autocomplete="off" checked> $0
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value5.0000" value="5.0000" autocomplete="off"> $5
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value10.0000" value="10.0000" autocomplete="off"> $10
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value20.0000" value="20.0000" autocomplete="off"> $20
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value30.0000" value="30.0000" autocomplete="off"> $30
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value35.0000" value="35.0000" autocomplete="off"> $35
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value40.0000" value="40.0000" autocomplete="off"> $40
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value45.0000" value="45.0000" autocomplete="off"> $45
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value50.0000" value="50.0000" autocomplete="off"> $50
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value60.0000" value="60.0000" autocomplete="off"> $60
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value70.0000" value="70.0000" autocomplete="off"> $70
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value80.0000" value="80.0000" autocomplete="off"> $80
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value100.0000" value="100.0000" autocomplete="off"> $100
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value120.0000" value="120.0000" autocomplete="off"> $120
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value140.0000" value="140.0000" autocomplete="off"> $140
+												</label>
+											</div>
+											<div class="btn-group-toggle" data-toggle="button">
+												<label class="btn btn-outline-secondary btn-amount">
+													<input type="radio" name="Value" id="Value180.0000" value="180.0000" autocomplete="off"> $180
+												</label>
+											</div>
 										</div>
 										<div class="flex-container">
 											<p class="line-break position-relative mr-0 ml-0">and/or</p>
