--- a/src/_secondary-boilerplate.html
+++ b/src/_secondary-boilerplate.html
@@ -62,7 +62,7 @@
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="/fares">Fares</a>
 									<a class="dropdown-item" href="/go-to-card">Go-To Card</a>
-									<a class="dropdown-item" href="/pass-programs">Pass Programs</a>
+									<a class="dropdown-item" href="/passes">Pass Programs</a>
 									<a class="dropdown-item" href="https://store.metrotransit.org/">Store</a>
 								</div>
 							</li>
