--- a/src/store1.html
+++ b/src/store1.html
@@ -99,7 +99,7 @@
 									<a class="dropdown-item"
 									   href="/go-to-card">Go-To Card</a>
 									<a class="dropdown-item"
-									   href="/pass-programs">Pass Programs</a>
+									   href="/passes">Pass Programs</a>
 									<a class="dropdown-item"
 									   href="https://store.metrotransit.org/">Store</a>
 								</div>
