--- a/src/billing.html
+++ b/src/billing.html
@@ -66,9 +66,9 @@
 									<a class="dropdown-item"
 									   href="/alerts">Alerts</a>
 									<a class="dropdown-item"
-									   href="/park-ride">Find a Park &amp; Ride</a>
+									   href="/park-ride-lots">Find a Park &amp; Ride</a>
 									<a class="dropdown-item"
-									   href="/planner/servicesfinder.aspx">
+									   href="/stops-stations">
 										Find a Stop or Station
 									</a>
 								</div>
