--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -44,8 +44,8 @@
 									<a class="dropdown-item" href="/trip-planner">Trip Planner</a>
 									<a class="dropdown-item" href="/nextrip">NexTrip</a>
 									<a class="dropdown-item" href="/alerts">Alerts</a>
-									<a class="dropdown-item" href="/park-ride">Find a Park &amp; Ride</a>
-									<a class="dropdown-item" href="/planner/servicesfinder.aspx">
+									<a class="dropdown-item" href="/park-ride-lots">Find a Park &amp; Ride</a>
+									<a class="dropdown-item" href="/stops-stations">
 										Find a Stop or Station
 									</a>
 								</div>
