--- a/src/store2.html
+++ b/src/store2.html
@@ -71,7 +71,7 @@
 									More
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="/carpool">Carpool &amp; Vanpool</a>
+									<a class="dropdown-item" href="/carpool-vanpool">Carpool &amp; Vanpool</a>
 									<a class="dropdown-item" href="/transit-link">Transit Link</a>
 									<a class="dropdown-item" href="/guaranteed-ride-home">Guaranteed Ride Home</a>
 									<a class="dropdown-item" href="/bicycle">Bicycle</a>
