--- a/src/terms.html
+++ b/src/terms.html
@@ -85,7 +85,7 @@
 									Help
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="/how-to-ride">How to Ride Guide</a>
+									<a class="dropdown-item" href="/how-to-ride">How to Ride</a>
 									<a class="dropdown-item" href="contact-us">Contact Us</a>
 									<a class="dropdown-item" href="/lost-found">Lost &amp; Found</a>
 									<a class="dropdown-item" href="/accessibility">Accessibility</a>
