Updated Park & Ride link.

--- a/src/billing.html
+++ b/src/billing.html
@@ -43,7 +43,7 @@
 									<a class="dropdown-item" href="/trip-planner">Trip Planner</a>
 									<a class="dropdown-item" href="/nextrip">NexTrip</a>
 									<a class="dropdown-item" href="/rider-alerts">Alerts</a>
-									<a class="dropdown-item" href="/park-ride-lots">Find a Park &amp; Ride</a>
+									<a class="dropdown-item" href="/park-rides">Find a Park &amp; Ride</a>
 									<a class="dropdown-item" href="/stops-stations">
 										Find a Stop or Station
 									</a>
