done with designs

--- a/src/login.html
+++ b/src/login.html
@@ -173,16 +173,16 @@
 					<section class="section white-bg">
 						<div class="container d-flex justify-content-center">
                             <div class="login-signup-form gray-bg-100 p-4 billing-info">
-                                <div class="d-flex justify-content-end mb-4">
+                                <div class="d-flex justify-content-end">
                                      <p class="d-flex denote-required position-relative"><span
-                                        class="required-symbol">&#42;</span> = Required Field</p>
+                                        class="required-symbol">&#42;</span>= Required Field</p>
                                 </div>
                                 <div class="pr-4">
                                     <div class="form-group mb-4 w-auto required">
-                                        <input type="email" class="form-control gray-box" id="loginEmail" aria-describedby="emailHelp" placeholder="User Name">
+                                        <input type="username" class="form-control gray-box" id="loginEmail" aria-describedby="emailHelp" placeholder="User Name">
                                     </div>
                                     <div class="form-group mb-4 w-auto required">
-                                        <input type="password" class="form-control gray-box" id="loginPassword" aria-describedby="emailHelp" placeholder="Password">
+                                        <input type="email" class="form-control gray-box" id="emailAddress" aria-describedby="emailHelp" placeholder="E-mail Address">
                                     </div>
                                 </div>
                                 
