--- a/src/create-account.html
+++ b/src/create-account.html
@@ -172,28 +172,30 @@
 					<!-- Main page content -->
 					<section class="section white-bg">
 						<div class="container d-flex justify-content-center">
-							<div class="login-signup-form billing-info">
+							<div class="login-signup-form gray-bg-100 p-4 billing-info">
 								<div class="d-flex justify-content-between">
 									<p class="font-weight-bold text-wrap">Online shopping at metrotransit.org is faster</p>
 									
-									<p class="ml-3 d-flex denote-required position-relative">&nbsp;<span
-										class="required-symbol">&#42;</span> = Required Field</p>
+									<p class="ml-3 d-flex denote-required position-relative"><span
+										class="required-symbol">&#42;</span> =&nbsp;Required Field</p>
 								</div>
-								<div class="form-group mb-4 required">
-									<input type="email" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
-									<small id="emailHelp" class="form-text text-muted">Must be 5-20 characters. You can use numbers, letters and underscore. It is not case-sensitive.</small>
-								</div>
-								<div class="form-group mb-4 required">
-									<input type="email" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-mail">
-									<small id="emailHelp" class="form-text text-muted">At least 8 characters, including one symbol character.</small>
-								</div>
-								<div class="form-group mb-4 required">
-									<input type="password" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Password">
-								</div>
-								<div class="form-group">
-									<input type="password" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Confirm Password">
-								</div>
-								<div class="d-flex justify-content-center">
+								<div class="pr-4 mb-4">
+									<div class="form-group mb-4 required">
+										<input type="email" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="User Name">
+										<small id="emailHelp" class="form-text text-muted">Must be 5-20 characters. You can use numbers, letters and underscore. It is not case-sensitive.</small>
+									</div>
+									<div class="form-group mb-4 required">
+										<input type="email" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-mail">
+										<small id="emailHelp" class="form-text text-muted">At least 8 characters, including one symbol character.</small>
+									</div>
+									<div class="form-group mb-4 required">
+										<input type="password" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Password">
+									</div>
+									<div class="form-group">
+										<input type="password" class="form-control gray-box" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Confirm Password">
+									</div>
+								</div>								
+								<div class="d-flex justify-content-center mb-2">
 									<button class="btn btn-warning">Create account</button>
 								</div>
 							</div>
