adding pt-2 to buy a go-to card radio btn div

--- a/src/store1.html
+++ b/src/store1.html
@@ -233,7 +233,7 @@
 									</div>
 									<div class="card-body">
 										<h3 class="h4 text-center">Choose an amount</h3>
-										<div class="flex-wrap btn-group btn-group-toggle" data-toggle="buttons">
+										<div class="flex-wrap btn-group btn-group-toggle pt-2" data-toggle="buttons">
 											<label class="btn btn-outline-secondary active">
 												<input type="radio" name="Value" id="Value0" value="0" autocomplete="off" checked>
 												<p>$0</p>
