--- a/src/my-fare-card-list-dataTables.html
+++ b/src/my-fare-card-list-dataTables.html
@@ -9,7 +9,7 @@
 	<!-- build:css /template/css/app.min.css -->
 	<link rel="stylesheet" href="/template/css/app.css">
 	<!-- endbuild -->
-	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.20/fh-3.1.6/r-2.2.3/sc-2.0.1/datatables.min.css"/>
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.20/fh-3.1.6/r-2.2.3/datatables.min.css"/>
 
 </head>
 
